objects/Resource__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Lookup</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Resources</relationshipLabel>
        <relationshipName>Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ForceUpdateContactLookup__c</fullName>
        <label>ForceUpdateContactLookup</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGB_License_Expiration_Date__c</fullName>
        <formula>IF(OR(ispickval(License_Status__c,&quot;Eligible to Work&quot;),ispickval(License_Status__c,&quot;Licensed&quot;)),( Status_Date__c + 731),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IGB License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IGB_Number__c</fullName>
        <label>IGB Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Issue_Date__c</fullName>
        <label>License Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Status__c</fullName>
        <label>License Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Eligible to work</fullName>
                </value>
                <value>
                    <fullName>Not eligible to work</fullName>
                </value>
                <value>
                    <fullName>Licensed</fullName>
                </value>
                <value>
                    <fullName>Denied Applicant</fullName>
                </value>
                <value>
                    <fullName>Denied Renewal Applicant</fullName>
                </value>
                <value>
                    <fullName>Revoked License</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Terminal Handler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Licensed_Last_7_Days__c</fullName>
        <formula>IF(AND(ISPICKVAL(License_Status__c,&quot;Eligible to Work&quot;),Status_Date__c &lt;= TODAY(), Status_Date__c &gt;= (TODAY()-7)),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Licensed Last 7 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resource_Code__c</fullName>
        <label>Resource Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Email__c</fullName>
        <label>Resource Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Resource_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource Region</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Region__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Key Region</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Resources</relationshipLabel>
        <relationshipName>Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource_Status__c</fullName>
        <label>Resource Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Leave</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resource_Type__c</fullName>
        <label>Resource Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <label>Resource</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IGB_Number__c</columns>
        <columns>License_Status__c</columns>
        <columns>License_Type__c</columns>
        <columns>Resource_Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>